Pull request #286: TND-3683: fix validations for referenceBooks components
Squashed commit of the following:

commit fa8b1b8ed7b244fe8f3bcc96e2507c4f67c60e65
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Aug 11 16:54:32 2021 +0300

    TND-3683: fix validations for referenceBooks components

--- a/src/containers/LoginPage/LoginPage.module.css
+++ b/src/containers/LoginPage/LoginPage.module.css
@@ -11,6 +11,13 @@
     margin: 0 auto;
 }
 
+.loginForm :global(.ant-form-item-has-error .ant-input:focus),
+.loginForm :global(.ant-form-item-has-error .ant-input-affix-wrapper:focus),
+.loginForm :global(.ant-form-item-has-error .ant-input-focused),
+.loginForm :global(.ant-form-item-has-error .ant-input-affix-wrapper-focused) {
+    border-color: #eb505a;
+}
+
 ::-ms-clear, ::-ms-reveal {
     display: none;
 }
